// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test-vault/features snapshot coverage > renders card-types/cloze.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Extra": "",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Fcloze.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/cloze</small></a>",
      "Text": "<p>Cloze > The mitochondria is the {{c1::powerhouse}} of the cell.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "card-types",
    "fields": {
      "Extra": "",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Fcloze.md#%5Ecard-1"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/cloze</small></a>",
      "Text": "<p>Cloze > {{c1::Highlighted cloze}} inside a sentence.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/fenced-basic.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Hypertext Transfer Protocol.</p>",
      "Front": "<p>Fenced basic > What does HTTP stand for?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Ffenced-basic.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/fenced-basic</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/fenced-reversed.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Transmission Control Protocol</p>",
      "Front": "<p>Fenced reversed > TCP</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Ffenced-reversed.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/fenced-reversed</small></a>",
    },
    "modelName": "Obsidian-basic-reversed",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/hashtag.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>100 degrees Celsius.</p>",
      "Front": "<p>Hashtag (#card) > What is the boiling point of water at sea level?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Fhashtag.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/hashtag</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/inline-basic.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Paris.</p>",
      "Front": "<p>Inline basic > What is the capital of France?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Finline-basic.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/inline-basic</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders card-types/inline-reversed.md 1`] = `
[
  {
    "deckName": "card-types",
    "fields": {
      "Back": "<p>Four.</p>",
      "Front": "<p>Inline reversed > What is 2 + 2?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=card-types%2Finline-reversed.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">card-types/inline-reversed</small></a>",
    },
    "modelName": "Obsidian-basic-reversed",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/audio.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A bell.</p>",
      "Front": "<p>Audio > What does this sound like? [sound:d650f6e7fa0f4f12170987cc5c2de3f3c0e4a335.wav]</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Faudio.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/audio</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A short beep.</p>",
      "Front": "<p>Audio > Listen carefully [sound:30db0de556da42068033d53fbb07902377d0550c.wav]</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Faudio.md#%5Ecard-1"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/audio</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/code-blocks.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>Prints <code>hi</code> to stdout.</p>",
      "Front": "<p>Code blocks > What does <code>console.log("hi")</code> do?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fcode-blocks.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/code-blocks</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/frontmatter-deck.md 1`] = `
[
  {
    "deckName": "Custom::Subdeck",
    "fields": {
      "Back": "<p>Custom::Subdeck.</p>",
      "Front": "<p>Frontmatter deck override > What deck does this card belong to?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Ffrontmatter-deck.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/frontmatter-deck</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/frontmatter-tags.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>Plants converting light into energy.</p>",
      "Front": "<p>Frontmatter tags merge > What is photosynthesis?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Ffrontmatter-tags.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/frontmatter-tags</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
      "biology",
      "custom-tag",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/images.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>It shows a flow.</p>",
      "Front": "<p>Images > Describe the diagram <img src="45f018d9703bdbe54824e9eb04cf0e54eb6801e8.png"></p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fimages.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/images</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A screenshot.</p>",
      "Front": "<p>Images > What does this look like? <img src="2c23728f3575235a2550504a24c631e41ca33bb8.png" alt="alt"></p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fimages.md#%5Ecard-1"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/images</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders content/wikilinks.md 1`] = `
[
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A page in Obsidian.</p>",
      "Front": "<p>Wikilinks > What is a <a href="obsidian://open?vault=Vault&amp;file=note">note</a>?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/wikilinks</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>Same target, different display.</p>",
      "Front": "<p>Wikilinks > What is <a href="obsidian://open?vault=Vault&amp;file=note">aliased text</a>?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-1"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/wikilinks</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A link to a heading.</p>",
      "Front": "<p>Wikilinks > What is <a href="obsidian://open?vault=Vault&amp;file=note#Heading">note#Heading</a>?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-2"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/wikilinks</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "content",
    "fields": {
      "Back": "<p>A link to a block.</p>",
      "Front": "<p>Wikilinks > What is <a href="obsidian://open?vault=Vault&amp;file=note#%5Eblock-id">note#^block-id</a>?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=content%2Fwikilinks.md#%5Ecard-3"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">content/wikilinks</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/audio-in-cloze.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Faudio-in-cloze.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/audio-in-cloze</small></a>",
      "Text": "<p>Audio in cloze > The famous opening of {{c1::Beethoven's 5th [sound:493fdd8f82cb6139db2e5f979a79b393b125dfa0.wav]}} starts here.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/image-in-reversed.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<p>The flag of France.</p>",
      "Front": "<p>Image in reversed > <img src="760b5ea4a888728b0697120e6a87662fbddfabd0.png"></p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fimage-in-reversed.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/image-in-reversed</small></a>",
    },
    "modelName": "Obsidian-basic-reversed",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/multiple-cards-per-note.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<ol start="2">
<li></li>
</ol>",
      "Front": "<p>Multiple cards per note > What is 1 + 1?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/multiple-cards-per-note</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<ol start="4">
<li></li>
</ol>",
      "Front": "<p>Multiple cards per note > What is 2 + 2?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-1"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/multiple-cards-per-note</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Back": "<p>6</p>",
      "Front": "<p>Multiple cards per note > What is 3 + 3?</p>",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-2"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/multiple-cards-per-note</small></a>",
    },
    "modelName": "Obsidian-basic",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fmultiple-cards-per-note.md#%5Ecard-3"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/multiple-cards-per-note</small></a>",
      "Text": "<p>Multiple cards per note > The {{c1::mitochondria}} is the powerhouse of the cell.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;

exports[`test-vault/features snapshot coverage > renders interactions/wikilink-in-cloze.md 1`] = `
[
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fwikilink-in-cloze.md#%5Ecard-0"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/wikilink-in-cloze</small></a>",
      "Text": "<p>Wikilink in cloze > The {{c1::<a href="obsidian://open?vault=Vault&amp;file=capital">capital</a>}} of France is Paris.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
  {
    "deckName": "interactions",
    "fields": {
      "Extra": "",
      "Source": "<a class="flashcards-source" href="obsidian://open?vault=Vault&file=interactions%2Fwikilink-in-cloze.md#%5Ecard-1"><span class="flashcards-source-action">Edit source in Obsidian ↗</span><br><small class="flashcards-source-path">interactions/wikilink-in-cloze</small></a>",
      "Text": "<p>Wikilink in cloze > The {{c1::<a href="obsidian://open?vault=Vault&amp;file=capital">capital city</a>}} of Italy is Rome.</p>",
    },
    "modelName": "Obsidian-cloze",
    "tags": [
      "obsidian",
      "feature-fixture",
    ],
  },
]
`;
